// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineItem component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="typewriter"
  />
</DocumentFragment>
`;

exports[`TimelineItem component renders correctly after 1.4 seconds 1`] = `
<DocumentFragment>
  <div
    class="typewriter"
  >
    Web developer
  </div>
</DocumentFragment>
`;

exports[`TimelineItem component renders correctly after 5 seconds 1`] = `
<DocumentFragment>
  <div
    class="typewriter"
  >
    Manager
  </div>
</DocumentFragment>
`;
